log
Fri Apr  8 16:01:13 UTC 2022: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:57:27: error: expected expression before ‘)’ token
   mapa->buckets = (Pair**))malloc(sizeof(Pair*)*capacity);
                           ^
hashmap.c:57:27: error: expected statement before ‘)’ token
Compilation failed
225460c
Fri Apr  8 16:02:00 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7771584
Fri Apr  8 16:08:52 UTC 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/70
0fb8b3c
Sun Apr 10 22:58:57 UTC 2022: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘firstMap’:
hashmap.c:86:23: error: ‘i’ undeclared (first use in this function)
   return map->buckets[i];
                       ^
hashmap.c:86:23: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:87:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
50689c3
Sun Apr 10 23:03:39 UTC 2022: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘firstMap’:
hashmap.c:84:14: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       primero=map->buckets[i];
              ^
hashmap.c:88:10: error: return makes pointer from integer without a cast [-Werror=int-conversion]
   return primero;
          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
647fc00
Sun Apr 10 23:05:41 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘firstMap’:
hashmap.c:84:14: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       primero=map->buckets[i];
              ^
hashmap.c:88:10: error: return makes pointer from integer without a cast [-Werror=int-conversion]
   return primero;
          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0ac23fd
Sun Apr 10 23:05:58 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘firstMap’:
hashmap.c:84:14: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       primero=map->buckets[i];
              ^
hashmap.c:88:10: error: return makes pointer from integer without a cast [-Werror=int-conversion]
   return primero;
          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
71ce41d
Sun Apr 10 23:07:16 UTC 2022: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘firstMap’:
hashmap.c:83:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       primero = map->buckets[i];
               ^
hashmap.c:87:10: error: return makes pointer from integer without a cast [-Werror=int-conversion]
   return primero;
          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7ff7702
Sun Apr 10 23:50:24 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:73:8: error: unused variable ‘posi’ [-Werror=unused-variable]
   long posi = hash(key, map->capacity);
        ^~~~
hashmap.c: In function ‘firstMap’:
hashmap.c:84:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       primero = map->buckets[i];
               ^
hashmap.c:88:10: error: return makes pointer from integer without a cast [-Werror=int-conversion]
   return primero;
          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b42e92f
Sun Apr 10 23:51:20 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:73:8: error: unused variable ‘posi’ [-Werror=unused-variable]
   long posi = hash(key, map->capacity);
        ^~~~
hashmap.c: In function ‘firstMap’:
hashmap.c:84:15: error: incompatible types when assigning to type ‘Pair {aka struct Pair}’ from type ‘Pair * {aka struct Pair *}’
       primero = map->buckets[i];
               ^
hashmap.c:88:10: error: incompatible types when returning type ‘Pair {aka struct Pair}’ but ‘Pair * {aka struct Pair *}’ was expected
   return primero;
          ^~~~~~~
hashmap.c:89:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
c5313dd
Sun Apr 10 23:51:35 UTC 2022: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘firstMap’:
hashmap.c:83:15: error: incompatible types when assigning to type ‘Pair {aka struct Pair}’ from type ‘Pair * {aka struct Pair *}’
       primero = map->buckets[i];
               ^
hashmap.c:87:10: error: incompatible types when returning type ‘Pair {aka struct Pair}’ but ‘Pair * {aka struct Pair *}’ was expected
   return primero;
          ^~~~~~~
hashmap.c:88:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
fb62887
